Final modified version

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -33,12 +33,12 @@
      "text": [
       "[WDM] - ====== WebDriver manager ======\n",
       "INFO:WDM:====== WebDriver manager ======\n",
-      "[WDM] - Current google-chrome version is 102.0.5005\n",
-      "INFO:WDM:Current google-chrome version is 102.0.5005\n",
-      "[WDM] - Get LATEST chromedriver version for 102.0.5005 google-chrome\n",
-      "INFO:WDM:Get LATEST chromedriver version for 102.0.5005 google-chrome\n",
-      "[WDM] - Driver [C:\\Users\\donna\\.wdm\\drivers\\chromedriver\\win32\\102.0.5005.61\\chromedriver.exe] found in cache\n",
-      "INFO:WDM:Driver [C:\\Users\\donna\\.wdm\\drivers\\chromedriver\\win32\\102.0.5005.61\\chromedriver.exe] found in cache\n"
+      "[WDM] - Current google-chrome version is 103.0.5060\n",
+      "INFO:WDM:Current google-chrome version is 103.0.5060\n",
+      "[WDM] - Get LATEST chromedriver version for 103.0.5060 google-chrome\n",
+      "INFO:WDM:Get LATEST chromedriver version for 103.0.5060 google-chrome\n",
+      "[WDM] - Driver [C:\\Users\\donna\\.wdm\\drivers\\chromedriver\\win32\\103.0.5060.53\\chromedriver.exe] found in cache\n",
+      "INFO:WDM:Driver [C:\\Users\\donna\\.wdm\\drivers\\chromedriver\\win32\\103.0.5060.53\\chromedriver.exe] found in cache\n"
      ]
     }
    ],
@@ -75,7 +75,7 @@
      "text": [
       "Mars Now\n",
       "------------------------------------------------------\n",
-      "Sixteen scientists from the U.S., Europe, Canada, and Japan have been chosen to help future samples from the Red Planet achieve their full potential.\n"
+      "Not even Obi-Wan Kenobi could convince Perseverance’s Katie Stack Morgan that these are not the rocks she’s looking for.\n"
      ]
     }
    ],
